Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48267

FreeBSD fix for qstorageinfo_unix.cpp

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0 RC
    • 5.5.1
    • Core: I/O
    • None
    • FreeBSD w530.nolden.freebsd 10.2-RELEASE FreeBSD 10.2-RELEASE #0 r286666: Wed Aug 12 15:26:37 UTC 2015 root@releng1.nyi.freebsd.org:/usr/obj/usr/src/sys/GENERIC amd64
    • 08be8691f7ba5e522cbc000b1880941128ad5f8c

    Description

      FreeBSD statfs doesn't support f_frsize:
      https://www.freebsd.org/cgi/man.cgi?query=statfs&sektion=2

      If f_frsize is to be used, FreeBSD implementation must be switched to use statvfs:
      https://www.freebsd.org/cgi/man.cgi?query=statvfs

      The appended patch uses the former f_bsize implementatoin of qt-5.5.0

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mandriver Dmitry Shachnev
            rnolden Marie Loise Nolden (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes